--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
 
+        <!--Spring-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -115,8 +116,42 @@
             <artifactId>spring-beans</artifactId>
             <version>${spring4.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${spring4.version}</version>
+        </dependency>
+
+        <!--MongoDB-->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>${mongo-data-driver}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>${spring-data-mongodb}</version>
+        </dependency>
+
+        <!--Logging-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
     </dependencies>
     <properties>
+        <log4j.version>1.7.25</log4j.version>
+        <spring-data-mongodb>1.10.3.RELEASE</spring-data-mongodb>
+        <mongo-data-driver>3.4.2</mongo-data-driver>
         <jersey.version>2.25.1</jersey.version>
         <spring4.version>4.3.8.RELEASE</spring4.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
